--- a/src/app/core/components/image-cropper/image-cropper.component.html
+++ b/src/app/core/components/image-cropper/image-cropper.component.html
@@ -3,8 +3,8 @@
 <!-- <input type="file" (change)="fileChangeEvent($event)" /> -->
 <ion-header class="ion-no-border">
     <ion-toolbar class="display-flex ion-justify-content-center ion-align-items-center">
-      <ion-buttons slot="start">
-        <ion-icon name="chat-back">B</ion-icon>
+      <ion-buttons (click)="dismiss()" slot="start">
+        <ion-icon name="chat-back"></ion-icon>
       </ion-buttons>
       <ion-title>Crop Image</ion-title>
     </ion-toolbar>
