added sales listing to sonar search, added profile image to free user marker

--- a/src/app/pages/map/marker-detail/marker-detail.component.html
+++ b/src/app/pages/map/marker-detail/marker-detail.component.html
@@ -2,14 +2,14 @@
 
   <ion-row class="firstrow">
 
-    <img *ngIf="currentItem.entity=='E' " class="userimg" src="{{appConstants.mediaPrefix + (currentItem.ProfilePhoto || currentItem.Image) }}"
+    <img *ngIf="currentItem.entity != 'U' " class="userimg" src="{{appConstants.mediaPrefix + (currentItem.ProfilePhoto || currentItem.Image) }}"
       onError="this.src='assets/icons/business/anonymous.svg'" />
     <ion-icon name="close-icon" class="closecross" (click)="closeDetails()"></ion-icon>
 
   </ion-row>
 
   <ion-row class="secondrow">
-    <ion-card-header class="followeruser" style="background-color:  #EAF1F4;">
+    <ion-card-header *ngIf="currentItem.entity != 'U' " class="followeruser" style="background-color:  #EAF1F4;">
       <ion-text class="ion-text-center name">{{currentItem.Title}}</ion-text>
       <ion-card-subtitle class="fi-multiline-truncate username">@{{currentItem.Description}} | 100 Followers</ion-card-subtitle>
     </ion-card-header>
@@ -17,7 +17,7 @@
 
   <ion-row class="firstrow">
 
-    <img *ngIf="currentItem.entity=='U' && currentItem.UserTypeId==1" (click)="openUser(currentItem)" class="userimg" src="{{appConstants.mediaPrefix + (currentItem.ProfilePhoto || currentItem.UserProfileImage) }}"
+    <img *ngIf="currentItem.entity=='U' " (click)="openUser(currentItem)" class="userimg" src="{{appConstants.mediaPrefix + (currentItem.ProfileImage || currentItem.UserProfileImage) }}"
       onError="this.src='assets/icons/business/anonymous.svg'" />
     <ion-icon name="close-icon" class="closecross" (click)="closeDetails()"></ion-icon>
   </ion-row>
@@ -25,7 +25,7 @@
 
   <ion-row class="secondrow">
 
-    <ion-card (click)="openUser(currentItem)" class="header-card" *ngIf="currentItem.entity=='U' && currentItem.UserTypeId==1" style="background-color:  #EAF1F4;">
+    <ion-card (click)="openUser(currentItem)" class="header-card" *ngIf="currentItem.entity=='U' " style="background-color:  #EAF1F4;">
 
       <ion-card-header class="followeruser" style="background-color:  #EAF1F4;">
         <ion-text class="ion-text-center name">{{currentItem.DisplayName}}</ion-text>
