added validation while uploading profile image

--- a/src/app/pages/home/free-user-canvas/edit-personal/edit-personal.page.html
+++ b/src/app/pages/home/free-user-canvas/edit-personal/edit-personal.page.html
@@ -41,7 +41,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-button expand="block" shape="round"
+  <ion-button expand="block" shape="round" [disabled]="uploadingImage"
     [color]="(userCanvasProfile.canvasProfile.ProfileImage && userCanvasProfile.canvasProfile.ProfileImage.indexOf('localhost')!=-1) ? 'medium' : 'primary'"
     (click)="saveUserImgAbt()">Save</ion-button>
 </ion-footer>
