--- a/src/app/pages/sidemenu/events/event-view/event-view.page.scss
+++ b/src/app/pages/sidemenu/events/event-view/event-view.page.scss
@@ -70,6 +70,7 @@ ion-content {
     
   & ion-list {
     padding: 10px;
+    padding-top: 0px;
 
     & ion-item {
       margin-bottom: 0;
@@ -111,6 +112,7 @@ ion-content {
 
       & ion-text {
         min-height: 26px;
+        width: 330px;
 
         & h2 {
           font: normal normal 600 22px/24px SF Pro Display;
