--- a/src/app/pages/map/marker-detail/marker-detail.component.html
+++ b/src/app/pages/map/marker-detail/marker-detail.component.html
@@ -29,7 +29,7 @@
     <ion-card (click)="openUser(currentItem)" class="header-card" *ngIf="currentItem.entity=='U' " style="background-color:  #EAF1F4;">
 
       <ion-card-header class="followeruser" style="background-color:  #EAF1F4;">
-        <ion-text class="ion-text-center name">{{currentItem.DisplayName}}</ion-text>
+        <ion-text class="ion-text-center name">{{currentItem.FirstName}}</ion-text>
         <ion-card-subtitle class="fi-multiline-truncate username">@{{currentItem.UserName}} | 100 Followers</ion-card-subtitle>
       </ion-card-header>
 
@@ -102,7 +102,7 @@
     <ion-text>My Traits</ion-text>
   </div>
 
-  <div  *ngIf="currentItem.entity=='U' " class="alltraits">
+  <!-- <div  *ngIf="currentItem.entity=='U' " class="alltraits">
     <ion-chip class="person_trait" color="primary">Dance</ion-chip>
     <ion-chip class="person_trait" color="primary">football Play</ion-chip>
     <ion-chip class="person_trait" color="primary">Music</ion-chip>
@@ -110,6 +110,11 @@
     <ion-chip class="person_trait" color="primary">Event creating</ion-chip>
     <ion-chip class="person_trait" color="primary">Reading Books</ion-chip>
     <ion-chip class="person_trait" color="primary">Stiching</ion-chip>
+  </div> -->
+  <div *ngIf="currentItem.entity == 'U'" class="alltraits">
+    <ion-chip *ngFor="let trait of currentItem.Traits" class="person_trait" color="primary">
+      {{ trait }}
+    </ion-chip>
   </div>
 
   <!-- <div *ngIf="currentItem.entity=='U' && currentItem.UserTypeId==2">
@@ -143,15 +148,16 @@
    
       <ion-card-header class="eventcard" style="background-color:  #EAF1F4;">
         <div style="display:flex; justify-content: center; align-items: center; width: 300px;">
-          <ion-text style="font-size:26px; color:#285078 ; text-align: center;" class="ion-text-center name">{{currentItem.Title}}</ion-text>
+          <ion-text style="font-size:26px; color:#285078 ; text-align: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" class="ion-text-center name">{{currentItem.Title}}</ion-text>
         </div>
         
         <div *ngIf="currentItem.entity =='SL' " style="font-size:27px; color: #1A3253; display: flex; text-align: center; justify-content: center; align-items: center;" >
           <p style=" margin-bottom: 0px;">$ {{currentItem.Price}}</p>
          </div>
        <div style="display: flex; align-items: center; justify-content: center; gap: 10px;">
-        <div class="userevent_namelogo">
-
+        <div  *ngIf="currentItem.entity !='U' " >
+          <img class="userevent_namelogo" src="{{currentItem.ProfileImage}}"
+          onError="this.src='assets/icons/business/anonymous.svg'" />
         </div>
         <p *ngIf="currentItem.entity =='E' " style="font-size: 24px; color: #1A3253;">Drop NightClub</p>
         <p *ngIf="currentItem.entity =='SL' " style="font-size: 24px; color: #1A3253;">@{{currentItem.FirstName}}</p>
